# Octo-Protocol

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  justfile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml  README.md
crates/api/src/: error.rs
crates/api/src/routes/: withdrawals.rs
crates/api/tests/: api_tests.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: error.rs  lib.rs
crates/ingest/: Cargo.toml  README.md
crates/ingest/src/: amount.rs  horizon.rs  lib.rs
crates/ingest/tests/: adversarial_replay_tests.rs  process_tests.rs
crates/store/: Cargo.toml  README.md
crates/store/migrations/: 0002_horizon_op_id.sql
crates/store/src/: lib.rs  models.rs
crates/store/tests/: store_tests.rs
crates/wallet-core/: Cargo.toml  README.md
crates/wallet-core/src/: asset.rs  error.rs  lib.rs  signer.rs
crates/webhooks/: Cargo.toml  README.md
crates/webhooks/src/: sign.rs
docs/: architecture.md  deposit-model.md
frontend/src/app/dashboard/wallets/[id]/: page.tsx
frontend/src/components/dashboard/: Modal.tsx
frontend/src/lib/: wallets.ts
reference/: README.md
